--- a/notebooks/icp55-and-inviable-proteins.ipynb
+++ b/notebooks/icp55-and-inviable-proteins.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "source": [
     "# Autoreload modules without having to restart the notebook kernel.\r\n",
     "%load_ext autoreload\r\n",
@@ -29,7 +29,16 @@
     "        'size': 32}\r\n",
     "plt.rc('font', **font)"
    ],
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "metadata": {
     "pycharm": {
      "name": "#%%\n"
@@ -49,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "source": [
     "# hi from bilbo\r\n",
     "import random\r\n",
@@ -71,7 +80,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-3-11894ace38c0>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;31m# Personal libraries\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 7\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mlib\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcluster\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      8\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mlib\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgraph\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mlib\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32m<ipython-input-6-7862e37e61ea>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      7\u001b[0m \u001b[1;31m# Personal libraries\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 8\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0mlib\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcluster\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      9\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mlib\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mgraph\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     10\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mlib\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mplot\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
       "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'lib.cluster'"
      ]
     }
@@ -93,11 +102,11 @@
    "cell_type": "code",
    "execution_count": 3,
    "source": [
-    "ICP55 = '4932.YER078C'\n",
-    "THRESHOLD = 900\n",
-    "MCL_INFLATION = 2  # The parameter controlling Markov Clustering\n",
-    "\n",
-    "# ICP55's inviable neighbour.\n",
+    "ICP55 = '4932.YER078C'\r\n",
+    "THRESHOLD = 900\r\n",
+    "MCL_INFLATION = 2  # The parameter controlling Markov Clustering\r\n",
+    "\r\n",
+    "# ICP55's inviable neighbour.\r\n",
     "YHC1 = '4932.YLR298C'"
    ],
    "outputs": [],
@@ -118,43 +127,43 @@
    "cell_type": "code",
    "execution_count": 4,
    "source": [
-    "class Cluster:\n",
-    "\n",
-    "    def __init__(self, proteins):\n",
-    "        self.proteins = proteins\n",
-    "\n",
-    "\n",
-    "class Protein:\n",
-    "\n",
-    "    def __init__(self, systemic_name):\n",
-    "        self.systemic_name = systemic_name\n",
-    "        self.clusters = []\n",
-    "\n",
-    "        self.neighbourhoods = {}  # Dict indexed by neighbourhood path length.\n",
-    "\n",
-    "\n",
-    "class NetworkHub:\n",
-    "    \"\"\"\n",
-    "    The controller passing networks and common data  (e.g. list of inviable proteins)\n",
-    "    \"\"\"\n",
-    "\n",
-    "    def __init__(self, networks, load_inviable_proteins=False):\n",
-    "        self.networks = networks\n",
-    "        self.inviable_proteins = None\n",
-    "        if load_inviable_proteins:\n",
-    "            self.inviable_proteins = lib.graph.read_inviable_proteins()\n",
-    "\n",
-    "\n",
-    "class NetworkWrapper:\n",
-    "    \"\"\"\n",
-    "    A wrapper for networks to store additional properties (e.g. clusters)\n",
-    "    \"\"\"\n",
-    "\n",
-    "    def __init__(self, network):\n",
-    "        self.network = network\n",
-    "        self.threshold = THRESHOLD\n",
-    "        self.proteins = [Protein(ICP55)]  # Proteins of interest.\n",
-    "        self.inviable_proteins = lib.graph.read_inviable_proteins()\n",
+    "class Cluster:\r\n",
+    "\r\n",
+    "    def __init__(self, proteins):\r\n",
+    "        self.proteins = proteins\r\n",
+    "\r\n",
+    "\r\n",
+    "class Protein:\r\n",
+    "\r\n",
+    "    def __init__(self, systemic_name):\r\n",
+    "        self.systemic_name = systemic_name\r\n",
+    "        self.clusters = []\r\n",
+    "\r\n",
+    "        self.neighbourhoods = {}  # Dict indexed by neighbourhood path length.\r\n",
+    "\r\n",
+    "\r\n",
+    "class NetworkHub:\r\n",
+    "    \"\"\"\r\n",
+    "    The controller passing networks and common data  (e.g. list of inviable proteins)\r\n",
+    "    \"\"\"\r\n",
+    "\r\n",
+    "    def __init__(self, networks, load_inviable_proteins=False):\r\n",
+    "        self.networks = networks\r\n",
+    "        self.inviable_proteins = None\r\n",
+    "        if load_inviable_proteins:\r\n",
+    "            self.inviable_proteins = lib.graph.read_inviable_proteins()\r\n",
+    "\r\n",
+    "\r\n",
+    "class NetworkWrapper:\r\n",
+    "    \"\"\"\r\n",
+    "    A wrapper for networks to store additional properties (e.g. clusters)\r\n",
+    "    \"\"\"\r\n",
+    "\r\n",
+    "    def __init__(self, network):\r\n",
+    "        self.network = network\r\n",
+    "        self.threshold = THRESHOLD\r\n",
+    "        self.proteins = [Protein(ICP55)]  # Proteins of interest.\r\n",
+    "        self.inviable_proteins = lib.graph.read_inviable_proteins()\r\n",
     "        self.mcl = None  # MCL"
    ],
    "outputs": [],
@@ -168,32 +177,32 @@
    "cell_type": "code",
    "execution_count": 5,
    "source": [
-    "# The first network is the largest connected component containing ICP55 with inviable proteins, has edges above 900 and no degree 0 nodes.\n",
-    "n0 = lib.graph.read_STRING()\n",
-    "n0 = lib.graph.remove_edges_below_threshold(n0, THRESHOLD)\n",
-    "n0 = lib.graph.remove_nodes_with_degree_lte(n0, 0)\n",
-    "n0 = lib.graph.get_largest_cc_with_node(n0, ICP55)\n",
-    "# We only want to look at the largest cc of ICP55.\n",
-    "n0 = NetworkWrapper(n0)\n",
-    "\n",
-    "# I want to visualise ICP55 neighbourhoods\n",
-    "n0.neighbourhoods = [\n",
-    "    lib.graph.get_neighbourhood(n0.network, ICP55, path_length=1),\n",
-    "    lib.graph.get_neighbourhood(n0.network, ICP55, path_length=2),\n",
-    "    lib.graph.get_neighbourhood(n0.network, ICP55, path_length=3)\n",
-    "]\n",
-    "\n",
-    "# Markov clustering\n",
-    "n0.mcl = lib.cluster.run_mcl(n0.network, inflation=MCL_INFLATION)\n",
-    "\n",
-    "# I also want to visualise ICP55 neighbourhoods as clusters\n",
-    "shortest_path_lengths = nx.single_source_shortest_path_length(n0.network, ICP55)\n",
-    "n0.neighbourhood_clusters = [\n",
-    "    lib.cluster.neighbourhood_clusters(n0.mcl.clusters, shortest_path_lengths, path_length=1),\n",
-    "    lib.cluster.neighbourhood_clusters(n0.mcl.clusters, shortest_path_lengths, path_length=2),\n",
-    "    lib.cluster.neighbourhood_clusters(n0.mcl.clusters, shortest_path_lengths, path_length=3)\n",
-    "]\n",
-    "# I use this to overlay ICP55's cluster exclusively on top of graphs.\n",
+    "# The first network is the largest connected component containing ICP55 with inviable proteins, has edges above 900 and no degree 0 nodes.\r\n",
+    "n0 = lib.graph.read_STRING()\r\n",
+    "n0 = lib.graph.remove_edges_below_threshold(n0, THRESHOLD)\r\n",
+    "n0 = lib.graph.remove_nodes_with_degree_lte(n0, 0)\r\n",
+    "n0 = lib.graph.get_largest_cc_with_node(n0, ICP55)\r\n",
+    "# We only want to look at the largest cc of ICP55.\r\n",
+    "n0 = NetworkWrapper(n0)\r\n",
+    "\r\n",
+    "# I want to visualise ICP55 neighbourhoods\r\n",
+    "n0.neighbourhoods = [\r\n",
+    "    lib.graph.get_neighbourhood(n0.network, ICP55, path_length=1),\r\n",
+    "    lib.graph.get_neighbourhood(n0.network, ICP55, path_length=2),\r\n",
+    "    lib.graph.get_neighbourhood(n0.network, ICP55, path_length=3)\r\n",
+    "]\r\n",
+    "\r\n",
+    "# Markov clustering\r\n",
+    "n0.mcl = lib.cluster.run_mcl(n0.network, inflation=MCL_INFLATION)\r\n",
+    "\r\n",
+    "# I also want to visualise ICP55 neighbourhoods as clusters\r\n",
+    "shortest_path_lengths = nx.single_source_shortest_path_length(n0.network, ICP55)\r\n",
+    "n0.neighbourhood_clusters = [\r\n",
+    "    lib.cluster.neighbourhood_clusters(n0.mcl.clusters, shortest_path_lengths, path_length=1),\r\n",
+    "    lib.cluster.neighbourhood_clusters(n0.mcl.clusters, shortest_path_lengths, path_length=2),\r\n",
+    "    lib.cluster.neighbourhood_clusters(n0.mcl.clusters, shortest_path_lengths, path_length=3)\r\n",
+    "]\r\n",
+    "# I use this to overlay ICP55's cluster exclusively on top of graphs.\r\n",
     "n0.icp55_cluster = lib.cluster.get_complexes_containing_protein(n0.mcl.clusters, ICP55)[0]"
    ],
    "outputs": [],
@@ -207,27 +216,27 @@
    "cell_type": "code",
    "execution_count": 6,
    "source": [
-    "n1 = lib.graph.read_STRING()\n",
-    "n1 = lib.graph.remove_edges_below_threshold(n1, THRESHOLD)\n",
-    "n1 = lib.graph.remove_nodes_with_degree_lte(n1, 0)\n",
-    "n1 = lib.graph.get_largest_cc_with_node(n1, ICP55)\n",
-    "n1 = NetworkWrapper(n1)\n",
-    "\n",
-    "n1.neighbourhoods = [\n",
-    "    lib.graph.get_neighbourhood(n1.network, ICP55, path_length=1),\n",
-    "    lib.graph.get_neighbourhood(n1.network, ICP55, path_length=2),\n",
-    "    lib.graph.get_neighbourhood(n1.network, ICP55, path_length=3)\n",
-    "]\n",
-    "\n",
-    "n1.mcl = lib.cluster.run_mcl(n1.network, inflation=MCL_INFLATION)\n",
-    "\n",
-    "shortest_path_lengths = nx.single_source_shortest_path_length(n1.network, ICP55)\n",
-    "n1.neighbourhood_clusters = [\n",
-    "    lib.cluster.neighbourhood_clusters(n1.mcl.clusters, shortest_path_lengths, path_length=1),\n",
-    "    lib.cluster.neighbourhood_clusters(n1.mcl.clusters, shortest_path_lengths, path_length=2),\n",
-    "    lib.cluster.neighbourhood_clusters(n1.mcl.clusters, shortest_path_lengths, path_length=3)\n",
-    "]\n",
-    "n1.icp55_cluster = lib.cluster.get_complexes_containing_protein(n1.mcl.clusters, ICP55)[\n",
+    "n1 = lib.graph.read_STRING()\r\n",
+    "n1 = lib.graph.remove_edges_below_threshold(n1, THRESHOLD)\r\n",
+    "n1 = lib.graph.remove_nodes_with_degree_lte(n1, 0)\r\n",
+    "n1 = lib.graph.get_largest_cc_with_node(n1, ICP55)\r\n",
+    "n1 = NetworkWrapper(n1)\r\n",
+    "\r\n",
+    "n1.neighbourhoods = [\r\n",
+    "    lib.graph.get_neighbourhood(n1.network, ICP55, path_length=1),\r\n",
+    "    lib.graph.get_neighbourhood(n1.network, ICP55, path_length=2),\r\n",
+    "    lib.graph.get_neighbourhood(n1.network, ICP55, path_length=3)\r\n",
+    "]\r\n",
+    "\r\n",
+    "n1.mcl = lib.cluster.run_mcl(n1.network, inflation=MCL_INFLATION)\r\n",
+    "\r\n",
+    "shortest_path_lengths = nx.single_source_shortest_path_length(n1.network, ICP55)\r\n",
+    "n1.neighbourhood_clusters = [\r\n",
+    "    lib.cluster.neighbourhood_clusters(n1.mcl.clusters, shortest_path_lengths, path_length=1),\r\n",
+    "    lib.cluster.neighbourhood_clusters(n1.mcl.clusters, shortest_path_lengths, path_length=2),\r\n",
+    "    lib.cluster.neighbourhood_clusters(n1.mcl.clusters, shortest_path_lengths, path_length=3)\r\n",
+    "]\r\n",
+    "n1.icp55_cluster = lib.cluster.get_complexes_containing_protein(n1.mcl.clusters, ICP55)[\r\n",
     "    0]"
    ],
    "outputs": [],
@@ -241,21 +250,21 @@
    "cell_type": "code",
    "execution_count": null,
    "source": [
-    "\n",
-    "# Generate a colour for each cluster. They are separated by Hue to make as large a visual diff as possible.\n",
-    "colours = lib.plot.generate_n_colours(len(n0.neighbourhood_clusters[1]))\n",
-    "colours_1 = lib.plot.generate_n_colours(len(n1.neighbourhood_clusters[1]))\n",
-    "\n",
-    "# Randomly shuffle colours so large clusters have visibly different colours.\n",
-    "random.shuffle(colours)\n",
-    "random.shuffle(colours_1)\n",
-    "\n",
-    "# Zip into tuples of (subgraph, colour)\n",
-    "subgraphs_and_colours = list(zip(map(n0.network.subgraph, n0.neighbourhood_clusters[1]), colours))\n",
-    "subgraphs_and_colours_1 = list(zip(map(n1.network.subgraph, n1.neighbourhood_clusters[1]), colours_1))\n",
-    "\n",
-    "# Add in the ICP55 cluster on top with a distinct colour\n",
-    "subgraphs_and_colours += [(n0.network.subgraph(n0.icp55_cluster), 'brown')]\n",
+    "\r\n",
+    "# Generate a colour for each cluster. They are separated by Hue to make as large a visual diff as possible.\r\n",
+    "colours = lib.plot.generate_n_colours(len(n0.neighbourhood_clusters[1]))\r\n",
+    "colours_1 = lib.plot.generate_n_colours(len(n1.neighbourhood_clusters[1]))\r\n",
+    "\r\n",
+    "# Randomly shuffle colours so large clusters have visibly different colours.\r\n",
+    "random.shuffle(colours)\r\n",
+    "random.shuffle(colours_1)\r\n",
+    "\r\n",
+    "# Zip into tuples of (subgraph, colour)\r\n",
+    "subgraphs_and_colours = list(zip(map(n0.network.subgraph, n0.neighbourhood_clusters[1]), colours))\r\n",
+    "subgraphs_and_colours_1 = list(zip(map(n1.network.subgraph, n1.neighbourhood_clusters[1]), colours_1))\r\n",
+    "\r\n",
+    "# Add in the ICP55 cluster on top with a distinct colour\r\n",
+    "subgraphs_and_colours += [(n0.network.subgraph(n0.icp55_cluster), 'brown')]\r\n",
     "subgraphs_and_colours_1 += [(n1.network.subgraph(n1.icp55_cluster), 'brown')]"
    ],
    "outputs": [],
@@ -269,7 +278,7 @@
    "cell_type": "code",
    "execution_count": 29,
    "source": [
-    "print(n0.mcl.modularity)\n",
+    "print(n0.mcl.modularity)\r\n",
     "print(n1.mcl.modularity)"
    ],
    "outputs": [
@@ -343,28 +352,28 @@
    "cell_type": "code",
    "execution_count": 9,
    "source": [
-    "figure = plt.figure(figsize=(30, 25))\n",
-    "ax1 = figure.add_subplot(221)\n",
-    "ax2 = figure.add_subplot(222)\n",
-    "ax3 = figure.add_subplot(223)\n",
-    "\n",
-    "lib.plot.network_layers(cc, [\n",
-    "    (neighbourhood_1, 'blue'),\n",
-    "    (essential_proteins, 'red'),\n",
-    "    (graph.subgraph(ICP55), 'yellow')\n",
-    "], base=neighbourhood_1, ax=ax1)\n",
-    "lib.plot.network_layers(cc, [\n",
-    "    (neighbourhood_2, 'blue'),\n",
-    "    (essential_proteins, 'red'),\n",
-    "    (graph.subgraph(ICP55), 'yellow')\n",
-    "], base=neighbourhood_2, ax=ax2)\n",
-    "lib.plot.network_layers(cc, [\n",
-    "    (neighbourhood_3, 'blue'),\n",
-    "    (essential_proteins, 'red'),\n",
-    "    (graph.subgraph(ICP55), 'yellow')\n",
-    "], base=neighbourhood_3, ax=ax3)\n",
-    "\n",
-    "figure.show()\n",
+    "figure = plt.figure(figsize=(30, 25))\r\n",
+    "ax1 = figure.add_subplot(221)\r\n",
+    "ax2 = figure.add_subplot(222)\r\n",
+    "ax3 = figure.add_subplot(223)\r\n",
+    "\r\n",
+    "lib.plot.network_layers(cc, [\r\n",
+    "    (neighbourhood_1, 'blue'),\r\n",
+    "    (essential_proteins, 'red'),\r\n",
+    "    (graph.subgraph(ICP55), 'yellow')\r\n",
+    "], base=neighbourhood_1, ax=ax1)\r\n",
+    "lib.plot.network_layers(cc, [\r\n",
+    "    (neighbourhood_2, 'blue'),\r\n",
+    "    (essential_proteins, 'red'),\r\n",
+    "    (graph.subgraph(ICP55), 'yellow')\r\n",
+    "], base=neighbourhood_2, ax=ax2)\r\n",
+    "lib.plot.network_layers(cc, [\r\n",
+    "    (neighbourhood_3, 'blue'),\r\n",
+    "    (essential_proteins, 'red'),\r\n",
+    "    (graph.subgraph(ICP55), 'yellow')\r\n",
+    "], base=neighbourhood_3, ax=ax3)\r\n",
+    "\r\n",
+    "figure.show()\r\n",
     "# figure.savefig(lib.files.make_filepath_to_graphs('icp55-neighbourhoods-with-inviable-proteins-highlighted.png'))"
    ],
    "outputs": [
@@ -408,10 +417,10 @@
    "cell_type": "code",
    "execution_count": 62,
    "source": [
-    "# Convert to sparse matrix to run the algorithm.\n",
-    "matrix = nx.to_scipy_sparse_matrix(cc)\n",
-    "result = mcl.run_mcl(matrix, inflation=2)\n",
-    "clusters = mcl.get_clusters(result)\n",
+    "# Convert to sparse matrix to run the algorithm.\r\n",
+    "matrix = nx.to_scipy_sparse_matrix(cc)\r\n",
+    "result = mcl.run_mcl(matrix, inflation=2)\r\n",
+    "clusters = mcl.get_clusters(result)\r\n",
     "mcl.draw_graph(matrix, clusters, node_size=50, with_labels=False)"
    ],
    "outputs": [
@@ -447,13 +456,13 @@
    "cell_type": "code",
    "execution_count": 20,
    "source": [
-    "figure = plt.figure(figsize=(30, 50))\n",
-    "ax1 = figure.add_subplot(211)\n",
-    "ax2 = figure.add_subplot(212)\n",
-    "\n",
-    "lib.plot.network_layers(cc, subgraphs_and_colours, base=neighbourhood_2, ax=ax1)\n",
-    "lib.plot.network_layers(cc_no_inviable, subgraphs_and_colours_1, base=neighbourhood_2_no_inviable, ax=ax2)\n",
-    "\n",
+    "figure = plt.figure(figsize=(30, 50))\r\n",
+    "ax1 = figure.add_subplot(211)\r\n",
+    "ax2 = figure.add_subplot(212)\r\n",
+    "\r\n",
+    "lib.plot.network_layers(cc, subgraphs_and_colours, base=neighbourhood_2, ax=ax1)\r\n",
+    "lib.plot.network_layers(cc_no_inviable, subgraphs_and_colours_1, base=neighbourhood_2_no_inviable, ax=ax2)\r\n",
+    "\r\n",
     "figure.show()"
    ],
    "outputs": [
@@ -534,9 +543,8 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
-   "language": "python",
-   "name": "python3"
+   "name": "python3",
+   "display_name": "Python 3.8.11 64-bit ('base': conda)"
   },
   "language_info": {
    "codemirror_mode": {
@@ -548,7 +556,10 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.5"
+   "version": "3.8.11"
+  },
+  "interpreter": {
+   "hash": "6466067c764c2694f1c40eca2655e6eecb7144d68186792bd40a1ffe2312ef24"
   }
  },
  "nbformat": 4,
